@@ -1,3 +1,9 @@
+2010-06-29 00:36:39 
+
+	Strawberry Doom:
+		Use network names instead of GREEN, INDIGO, etc. and Player #, disables dehacked replacement for these however.
+		Allow Chocolate Doom clients to join a Strawberry Doom Server.
+
 2010-06-28 23:50:47 GhostlyDeath
 
 	Strawberry Doom:
